--- a/index.html
+++ b/index.html
@@ -8159,6 +8159,10 @@
 
             // 画像URLモードに変更したため、ドラッグ&ドロップは不要
 
+            // Firebase認証を開始
+            console.log('🔐 Firebase認証を開始します...');
+            initializeAuth();
+
             // Firebase接続状態をチェック
             setTimeout(() => {
                 console.log('=== Firebase接続状態 ===');
@@ -8170,6 +8174,7 @@
             }, 2000);
 
             // 初期化時にオリパを読み込む（クラウドから）
+            // 認証完了後に自動的に読み込まれる
             loadOripasFromCloud();
         });
 
@@ -8229,37 +8234,21 @@ let isAuthReady = false;
 let authCallbacks = []; // 認証完了後に実行するコールバック
 let authInitialized = false; // 初期化済みフラグ
 
-// 認証完了を待つ関数
-function waitForAuth(callback, timeoutMs = 10000) {
-    if (isAuthReady) {
-        callback();
-        return;
-    }
-
-    authCallbacks.push({
-        callback: callback,
-        timeoutId: setTimeout(() => {
-            console.error('⚠️ Firebase認証がタイムアウトしました');
-            updateSyncStatus('❌ 認証タイムアウト');
-        }, timeoutMs)
-    });
-}
-
-// 認証を実行
-function initializeAuth() {
-    if (authInitialized) {
-        return;
-    }
-    authInitialized = true;
-
-    updateSyncStatus('🔄 認証中... (0%)');
-
-    auth.signInAnonymously()
-        .then(() => {
-            console.log('✅ Firebase匿名認証に成功しました');
+// 認証状態の変化を監視
+auth.onAuthStateChanged((user) => {
+    if (user) {
+        console.log('🔐 認証状態変化: ログイン中', user.uid);
+        if (!isAuthReady) {
             isAuthReady = true;
-            updateSyncStatus('🔄 初期化中... (50%)');
-            updateFirebaseStatusIndicator(); // ステータス更新
+
+            // DOMが読み込まれてから実行
+            if (document.readyState === 'loading') {
+                document.addEventListener('DOMContentLoaded', () => {
+                    updateFirebaseStatusIndicator();
+                });
+            } else {
+                updateFirebaseStatusIndicator();
+            }
 
             // すべてのコールバックを実行
             authCallbacks.forEach(item => {
@@ -8267,6 +8256,74 @@ function initializeAuth() {
                 item.callback();
             });
             authCallbacks = [];
+        }
+    } else {
+        console.log('🔐 認証状態変化: ログアウト');
+        isAuthReady = false;
+
+        // DOMが読み込まれてから実行
+        if (document.readyState === 'loading') {
+            document.addEventListener('DOMContentLoaded', () => {
+                updateFirebaseStatusIndicator();
+            });
+        } else {
+            updateFirebaseStatusIndicator();
+        }
+    }
+});
+
+// 認証完了を待つ関数
+function waitForAuth(callback, timeoutMs = 30000) {
+    if (isAuthReady) {
+        callback();
+        return;
+    }
+
+    const timeoutId = setTimeout(() => {
+        console.error('⚠️ Firebase認証がタイムアウトしました（30秒）');
+        console.error('ネットワーク接続を確認してください');
+        updateSyncStatus('❌ 認証タイムアウト');
+
+        // タイムアウトした場合もコールバックを実行（localStorageを使用）
+        console.log('⚠️ localStorageのデータを使用します');
+
+        // コールバックリストから削除
+        const index = authCallbacks.findIndex(item => item.timeoutId === timeoutId);
+        if (index >= 0) {
+            authCallbacks.splice(index, 1);
+        }
+    }, timeoutMs);
+
+    authCallbacks.push({
+        callback: callback,
+        timeoutId: timeoutId
+    });
+}
+
+// 認証を実行
+function initializeAuth() {
+    if (authInitialized) {
+        console.log('⚠️ 認証は既に初期化済みです');
+        return;
+    }
+    authInitialized = true;
+
+    // 既に認証済みかチェック（onAuthStateChangedで処理される）
+    if (auth.currentUser) {
+        console.log('✅ 既にFirebase認証済みです');
+        // onAuthStateChangedで処理されるので、ここでは何もしない
+        loadPrizeMasterFromCloudOnce();
+        return;
+    }
+
+    console.log('🔐 Firebase匿名認証を開始します...');
+    updateSyncStatus('🔄 認証中... (0%)');
+
+    auth.signInAnonymously()
+        .then(() => {
+            console.log('✅ Firebase匿名認証に成功しました');
+            updateSyncStatus('🔄 初期化中... (50%)');
+            // isAuthReadyの設定とコールバック実行はonAuthStateChangedで処理される
 
             // 認証完了後にデータを読み込む
             loadPrizeMasterFromCloudOnce();
@@ -8282,6 +8339,9 @@ function initializeAuth() {
                 userMessage = '❌ 匿名認証が無効です';
                 console.error('⚠️ Firebase Consoleで匿名認証を有効にしてください');
                 console.error('手順: Authentication > Sign-in method > 匿名 を有効化');
+                showNotification('❌ 匿名認証が無効です\nFirebase Consoleで匿名認証を有効にしてください', 'error');
+            } else {
+                showNotification(`❌ 認証エラー: ${error.message}`, 'error');
             }
             updateSyncStatus(userMessage);
             updateFirebaseStatusIndicator(); // ステータス更新
