--- a/index.html
+++ b/index.html
@@ -3746,13 +3746,20 @@
                     ${prizesWithIndex.map(item => {
                         const prize = item.prize;
                         const index = item.originalIndex;
+                        const masterPrize = prizeMaster.find(p => p.id === prize.masterPrizeId);
                         const masterStock = item.masterStock;
                         const isLowStock = masterStock < prize.count;
                         const shortage = isLowStock ? prize.count - masterStock : 0;
+                        const imageUrl = masterPrize?.imageUrl || '';
 
                         return `
                             <div style="background: white; border: 2px solid ${isLowStock ? 'rgba(255, 59, 48, 0.3)' : 'rgba(0, 0, 0, 0.1)'}; border-radius: var(--radius-md); padding: 16px; margin-bottom: 12px; ${isLowStock ? 'box-shadow: 0 2px 8px rgba(255, 59, 48, 0.1);' : ''}">
-                                <div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 12px;">
+                                <div style="display: flex; gap: 16px; margin-bottom: 12px;">
+                                    ${imageUrl ? `
+                                        <div style="flex-shrink: 0;">
+                                            <img src="${escapeHtml(imageUrl)}" alt="${escapeHtml(prize.name)}" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px; border: 1px solid rgba(0, 0, 0, 0.1);" onerror="this.style.display='none'">
+                                        </div>
+                                    ` : ''}
                                     <div style="flex: 1;">
                                         <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 4px;">
                                             <div style="font-weight: 700; font-size: 16px;">${escapeHtml(prize.name)}</div>
